reports/Model_Building.log
Traceback (most recent call last):
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/valliakella/opt/anaconda3/envs/datasci/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
Performed Hyper paramtuning and obtained the best params for each of the selected models.
------------------

[0;36m  File [0;32m"/var/folders/9y/pzvnqtl16zx6ry42n8nkvdq40000gn/T/ipykernel_4146/1000227368.py"[0;36m, line [0;32m1[0m
[0;31m    Performed Hyper paramtuning and obtained the best params for each of the selected models.[0m
[0m              ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1000227368.py, line 1)

